# cookiecutter_sandbox

./: .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml
cookiecutter_sandbox/: __init__.py
cookiecutter_sandbox_demo/: __init__.py
project_name/: __init__.py
project_name/config/: logging.yaml
